add all endpoints